--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -17,7 +16,7 @@
   <body>
     <div class="container">
       <div class="logo">
-        <img src="/images/logo.svg" alt="logo" />
+        <img src="./images/logo.svg" alt="logo" />
       </div>
       <div class="content">
         <h1>
@@ -37,7 +36,6 @@
         </p>
 
         <form action="#" method="POST" class="form" id="form" novalidate>
-          <!-- <div class="email-box"> -->
           <label for="email">
             <input
               value=""
@@ -48,7 +46,7 @@
               placeholder="Email Address"
             />
             <img
-              src="/images/icon-error.svg"
+              src="./images/icon-error.svg"
               alt="error ico"
               class="icon-error"
               id="icon-error"
@@ -56,9 +54,8 @@
             <span class="error-msg" id="error-msg" aria-live="polite"></span>
           </label>
           <button type="submit" class="submit-btn">
-            <img src="/images/icon-arrow.svg" alt="ico arrow" />
+            <img src="./images/icon-arrow.svg" alt="ico arrow" />
           </button>
-          <!-- </div> -->
         </form>
       </div>
 
