--- a/src/index.html
+++ b/src/index.html
@@ -8,26 +8,29 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap"
+      rel="stylesheet"
     />
 
-    <title>Frontend Mentor | Base Apparel coming soon page</title>
+    <title>Base Apparel coming soon page</title>
   </head>
   <body>
     <div class="container">
       <div class="logo">
-        <img src="./images/logo.svg" alt="logo" />
+        <div>
+          <img src="./assets/images/logo.svg" alt="logo" />
+        </div>
       </div>
       <div class="content">
         <h1>
           We're
           <br />
-          <strong>
-            coming
-          </strong>
-          <strong>
-            soon
-          </strong>
+          <strong> coming </strong>
+          <strong> soon </strong>
         </h1>
         <p>
           Hello fellow shoppers! We're currently building our new fashion store.
@@ -46,7 +49,7 @@
               placeholder="Email Address"
             />
             <img
-              src="./images/icon-error.svg"
+              src="./assets/images/icon-error.svg"
               alt="error ico"
               class="icon-error"
               id="icon-error"
@@ -54,7 +57,7 @@
             <span class="error-msg" id="error-msg" aria-live="polite"></span>
           </label>
           <button type="submit" class="submit-btn">
-            <img src="./images/icon-arrow.svg" alt="ico arrow" />
+            <img src="./assets/images/icon-arrow.svg" alt="ico arrow" />
           </button>
         </form>
       </div>
